--- a/src/components/Common/FormsControls/FormsControls.module.css
+++ b/src/components/Common/FormsControls/FormsControls.module.css
@@ -6,3 +6,9 @@
 .formControl span{
     color: red;
 }
+
+.formSummaryError{
+    border: 1px solid red;
+    padding: 5px;
+    color: indianred;
+}
